# crew-ai-demo

./: README.md  pyproject.toml
app/: multiagent.py
