[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Archit Jain <archit.jain@washpost.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
crewai = "^0.55.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
